--- a/sensai-frontend/.env
+++ b/sensai-frontend/.env
@@ -11,3 +11,4 @@ NEXT_PUBLIC_BACKEND_URL=http://localhost:8001
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 JUDGE0_API_URL=LINK_TO_JUDGE0_API
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyD5p2TV0337a5NxaWXDhM9J1uYLbjBPt-M
